--- a/index.html
+++ b/index.html
@@ -6,10 +6,15 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="icon" href="favicon.png" type="image/png">
   <link rel="icon" href="favicon.svg" sizes="any" type="image/svg+xml">
+  <link rel="stylesheet" href="style.css">
   <title>Vanilla auth form</title>
 </head>
 <body>
   Hello world
+  <input type="text" placeholder="hello dude">
+  <div class="outer">
+    <div class="inner"></div>
+  </div>
   <script src="./index.js"></script>
 </body>
 </html>
