Create layou, remove unnecessary libs

--- a/src/index.html
+++ b/src/index.html
@@ -11,14 +11,22 @@
       href="/images/favicon.png"
     />
     <link rel="stylesheet" href="/styles/styles.css" />
-    <title>Index</title>
+    <title>Test task</title>
   </head>
   <body>
-    Hello world
-    <input type="text" placeholder="hello dude" />
-    <div class="outer">
-      <div class="inner"></div>
+    <div class="layout">
+      <div class="layout-container contact">
+        <div class="contact__container">
+          <img class="logo" src="/images/chewing-gum-logo.svg" width="150" alt="Chewing Gum logo">
+        </div>
+      </div>
+      <div class="layout-container creation">
+        <div class="creation__container">
+            Create account
+        </div>
+      </div>
     </div>
+
     <script src="/scripts/index.js"></script>
   </body>
 </html>
