Change title, fix logo height

--- a/src/index.html
+++ b/src/index.html
@@ -11,13 +11,13 @@
       href="/images/favicon.png"
     />
     <link rel="stylesheet" href="/styles/styles.css" />
-    <title>Test task</title>
+    <title>Registration form</title>
   </head>
   <body>
     <div class="layout">
       <div class="layout-container contact">
         <div class="contact__container">
-          <img class="logo" src="/images/chewing-gum-logo.svg" width="150" alt="Chewing Gum logo">
+          <img class="logo" src="/images/chewing-gum-logo.svg" width="150" height="28" alt="Chewing Gum logo">
         </div>
       </div>
       <div class="layout-container creation">
