Import gum icons, fix button border, disable phone linkining in iOS

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <meta name="format-detection" content="telephone=no">
   <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon.png" />
   <link rel="stylesheet" href="/styles/styles.css" />
   <title>Registration form</title>
@@ -22,7 +23,7 @@
         <br>
         37 Greenpoint Avenue Ste. 219
         <br>
-        +1 999 99 99 9
+        <a href="tel:+199999999">+1 999 99 99 9</a>
       </p>
       <button id="send-feedback-button" class="contact__button button inverted">Send feedback</button>
     </div>
