--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
         <h1 class="title">Create account</h1>
         <form class="main__form form">
           <div class="form__field field">
-            <input name="name" class="field__input" placeholder=" " id="name" type="text" required autofocus>
+            <input name="name" class="field__input" placeholder=" " id="name" type="text" required>
             <label for="name" class="field__label">Full Name</label>
           </div>
 
@@ -46,7 +46,8 @@
           </div>
 
           <div class="form__field field">
-            <input name="phone" class="field__input" placeholder=" " id="phone" required type="tel" inputmode="tel"pattern="+7 [0-9]{3}-[0-9]{3}-[0-9]{4}">
+            <input name="phone" class="field__input" placeholder=" " id="phone" required type="tel" inputmode="tel"
+              pattern="+7 [0-9]{3}-[0-9]{3}-[0-9]{4}">
             <label for="phone" class="field__label">Phone</label>
           </div>
 
@@ -91,20 +92,37 @@
     </div>
   </main>
   <div id="modal" class="modal">
-    <div class="modal-content">
-      <div class="modal-body">
-        <button id="close-modal-button" class="button">x</button>
-        <h2 class="title">Feedback form</h2>
-        <form action="javascript:void(0);">
-          <input type="text">
-          <input type="text">
-          <input type="text">
-          <textarea type="text">
-          <button type="submit" class="button">Submit</button>
-        </form>
-      </div>
+    <div class="modal__content">
+      <button id="close-modal-button" class="modal__close-button close-button"></button>
+      <h3 class="title">Feedback form</h3>
+      <form class="modal__form form">
+        <div class="form__field field">
+          <input name="name" class="field__input" placeholder=" " id="name" type="text" required>
+          <label for="name" class="field__label">Full Name</label>
+        </div>
+
+        <div class="form__field field">
+          <input name="email" class="field__input" placeholder=" " id="email" type="email" required inputmode="email">
+          <label for="email" class="field__label">Email</label>
+          <div class="field__error-message">Error</div>
+        </div>
+
+        <div class="form__field field">
+          <input name="phone" class="field__input" placeholder=" " id="phone" required type="tel" inputmode="tel"
+            pattern="+7 [0-9]{3}-[0-9]{3}-[0-9]{4}">
+          <label for="phone" class="field__label">Phone</label>
+        </div>
+
+        <div class="form__field field">
+          <textarea name="questions" class="field__input" placeholder=" " id="questions" required></textarea>
+          <label for="queetions" class="field__label">Questions</label>
+        </div>
+
+        <button type="submit" class="form__submit-button button">Submit</button>
+      </form>
     </div>
   </div>
   <script defer src="./scripts/index.js"></script>
 </body>
+
 </html>
