--- a/src/index.html
+++ b/src/index.html
@@ -35,19 +35,19 @@
         <h1 class="title">Create account</h1>
         <form id="create-account-form" class="main__form form">
           <div class="form__field field">
-            <input name="name" class="field__input" placeholder=" " id="name" type="text">
-            <label for="name" class="field__label">Full Name</label>
+            <input name="name[]" class="field__input" placeholder=" " id="name" type="text">
+            <label for="name[]" class="field__label">Full Name</label>
           </div>
 
           <div class="form__field field">
-            <input name="email" class="field__input" placeholder=" " id="email" type="email" inputmode="email">
-            <label for="email" class="field__label">Email</label>
+            <input name="email[]" class="field__input" placeholder=" " id="email" type="email" inputmode="email">
+            <label for="email[]" class="field__label">Email</label>
             <div class="field__error-message">Error</div>
           </div>
 
           <div class="form__field field">
-            <input name="phone" class="field__input" placeholder=" " id="phone" type="tel" inputmode="tel">
-            <label for="phone" class="field__label">Phone</label>
+            <input name="phone[]" class="field__input" placeholder=" " id="phone" type="tel" inputmode="tel">
+            <label for="phone[]" class="field__label">Phone</label>
           </div>
 
           <div class="form__radio-header">Company size</div>
@@ -76,11 +76,11 @@
           </div>
 
           <div class="form__field field">
-            <textarea name="questions" class="field__input" placeholder=" " id="questions"></textarea>
-            <label for="queetions" class="field__label">Questions</label>
+            <textarea name="questions[]" class="field__input" placeholder=" " id="questions"></textarea>
+            <label for="queetions[]" class="field__label">Questions</label>
           </div>
 
-          <button type="submit" class="form__submit-button button">Submit</button>
+          <button type="submit" class="form__submit-button button" disabled>Submit</button>
         </form>
       </div>
       <footer>
@@ -96,27 +96,27 @@
       <h3 class="title">Feedback form</h3>
       <form id="feedback-form" class="modal__form form">
         <div class="form__field field">
-          <input name="name" class="field__input" placeholder=" " id="name" type="text">
-          <label for="name" class="field__label">Full Name</label>
+          <input name="name[]" class="field__input" placeholder=" " id="name" type="text">
+          <label for="name[]" class="field__label">Full Name</label>
         </div>
 
         <div class="form__field field">
-          <input name="email" class="field__input" placeholder=" " id="email" type="email" inputmode="email">
-          <label for="email" class="field__label">Email</label>
+          <input name="email[]" class="field__input" placeholder=" " id="email" type="email" inputmode="email">
+          <label for="email[]" class="field__label">Email</label>
           <div class="field__error-message">Error</div>
         </div>
 
         <div class="form__field field">
-          <input name="phone" class="field__input" placeholder=" " id="phone" type="tel" inputmode="tel">
-          <label for="phone" class="field__label">Phone</label>
+          <input name="phone[]" class="field__input" placeholder=" " id="phone" type="tel" inputmode="tel">
+          <label for="phone[]" class="field__label">Phone</label>
         </div>
 
         <div class="form__field field">
-          <textarea name="questions" class="field__input" placeholder=" " id="questions"></textarea>
-          <label for="queetions" class="field__label">Questions</label>
+          <textarea name="questions[]" class="field__input" placeholder=" " id="questions"></textarea>
+          <label for="queetions[]" class="field__label">Questions</label>
         </div>
 
-        <button type="submit" class="form__submit-button button">Submit</button>
+        <button type="submit" class="form__submit-button button" disabled>Submit</button>
       </form>
     </div>
   </div>
