Add modal closing by escape, copyright padding

--- a/src/index.html
+++ b/src/index.html
@@ -83,7 +83,7 @@
           <button type="submit" class="form__submit-button button" disabled>Submit</button>
         </form>
       </div>
-      <footer>
+      <footer class="main__footer">
         <small class="text">
           © 2019 All rights reserved. Privacy Policy. Terms of Service.
         </small>
