Fix bug when user can't close modal window by tap outside the modal, disable page scrolling when modal is opened

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <meta name="format-detection" content="telephone=no">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon.png">
   <link rel="stylesheet" href="./styles/styles.css">
-  <title>Registration form</title>
+  <title>Chewing gum</title>
 </head>
 
 <body class="page__body">
@@ -90,7 +90,7 @@
       </footer>
     </div>
   </main>
-  <div id="modal" class="modal">
+  <div id="modal" class="modal hidden">
     <div class="modal__content">
       <button id="close-modal-button" class="modal__close-button close-button"></button>
       <h3 class="title">Feedback form</h3>
