Fix field label when click on it, improve html a11y

--- a/src/index.html
+++ b/src/index.html
@@ -35,48 +35,56 @@
         <h1 class="title">Create account</h1>
         <form id="create-account-form" class="main__form form">
           <div class="form__field field">
-            <input name="name[]" class="field__input" placeholder=" " id="name" type="text">
+            <input name="name[]" class="field__input" placeholder="Full Name" id="name" type="text" required>
             <label for="name[]" class="field__label">Full Name</label>
           </div>
 
           <div class="form__field field">
-            <input name="email[]" class="field__input" placeholder=" " id="email" type="email" inputmode="email">
+            <input name="email[]" class="field__input" placeholder="Email" id="email" type="email" inputmode="email" required>
             <label for="email[]" class="field__label">Email</label>
             <div class="field__error-message">Error</div>
           </div>
 
           <div class="form__field field">
-            <input name="phone[]" class="field__input" placeholder=" " id="phone" type="tel" inputmode="tel">
+            <input name="phone[]" class="field__input" placeholder="Phone" id="phone" type="tel" inputmode="tel" required>
             <label for="phone[]" class="field__label">Phone</label>
           </div>
 
-          <div class="form__radio-header">Company size</div>
-          <div class="form__radio-block">
-            <label class="form__radio radio">
-              <input class="radio__input" type="radio" name="company-size">
-              <div class="radio__box">
-                <img class="radio__image" src="./images/gum.svg">
-                <span class="radio__label">1-15</span>
-              </div>
-            </label>
-            <label class="form__radio radio">
-              <input class="radio__input" type="radio" name="company-size">
-              <div class="radio__box">
-                <img class="radio__image" src="./images/gum-pair.svg">
-                <span class="radio__label">5-50</span>
-              </div>
-            </label>
-            <label class="form__radio radio">
-              <input class="radio__input" type="radio" name="company-size">
-              <div class="radio__box">
-                <img class="radio__image" src="./images/gum-trio.svg">
-                <span class="radio__label">50+</span>
-              </div>
-            </label>
-          </div>
+          <fieldset class="form__radio-box">
+            <legend class="form__radio-header">Company size</legend>
+            <ul class="form__radio-list">
+              <li>
+                <label class="form__radio radio">
+                  <input class="radio__input" type="radio" name="company-size" required>
+                  <div class="radio__box">
+                    <img class="radio__image" src="./images/gum.svg">
+                    <span class="radio__label">1-15</span>
+                  </div>
+                </label>
+              </li>
+              <li>
+                <label class="form__radio radio">
+                  <input class="radio__input" type="radio" name="company-size" required>
+                  <div class="radio__box">
+                    <img class="radio__image" src="./images/gum-pair.svg">
+                    <span class="radio__label">5-50</span>
+                  </div>
+                </label>
+              </li>
+              <li>
+                <label class="form__radio radio">
+                  <input class="radio__input" type="radio" name="company-size">
+                  <div class="radio__box">
+                    <img class="radio__image" src="./images/gum-trio.svg">
+                    <span class="radio__label">50+</span>
+                  </div>
+                </label>
+              </li>
+            </ul>
+          </fieldset>
 
           <div class="form__field field">
-            <textarea name="questions[]" class="field__input" placeholder=" " id="questions"></textarea>
+            <textarea name="questions[]" class="field__input" placeholder="Questions" id="questions"></textarea>
             <label for="queetions[]" class="field__label">Questions</label>
           </div>
 
@@ -96,18 +104,18 @@
       <h3 class="title">Feedback form</h3>
       <form id="feedback-form" class="modal__form form">
         <div class="form__field field">
-          <input name="name[]" class="field__input" placeholder=" " id="name" type="text">
+          <input name="name[]" class="field__input" placeholder=" " id="name" type="text" required>
           <label for="name[]" class="field__label">Full Name</label>
         </div>
 
         <div class="form__field field">
-          <input name="email[]" class="field__input" placeholder=" " id="email" type="email" inputmode="email">
+          <input name="email[]" class="field__input" placeholder=" " id="email" type="email" inputmode="email" required>
           <label for="email[]" class="field__label">Email</label>
           <div class="field__error-message">Error</div>
         </div>
 
         <div class="form__field field">
-          <input name="phone[]" class="field__input" placeholder=" " id="phone" type="tel" inputmode="tel">
+          <input name="phone[]" class="field__input" placeholder=" " id="phone" type="tel" inputmode="tel" required>
           <label for="phone[]" class="field__label">Phone</label>
         </div>
 
