--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
 <body class="page__body">
   <aside class="contact">
     <div class="contact__content">
-      <a class="contact__logo-link" href="#">
+      <a class="contact__logo-link" href="/">
         <img class="contact__logo" src="./images/chewing-gum-logo.svg" alt="Chewing Gum logo">
       </a>
       <h2 class="title">Contact us</h2>
@@ -35,27 +35,31 @@
         <h1 class="title">Create account</h1>
         <form id="create-account-form" class="main__form form">
           <div class="form__field field">
-            <input name="name[]" class="field__input" placeholder="Full Name" id="create-account-name" type="text" required>
+            <!-- // NOTE -->
+            <input name="create-account-name" class="field__input" placeholder="Full Name" id="create-account-name" type="text" required>
             <label for="create-account-name" class="field__label">Full Name</label>
           </div>
 
           <div class="form__field field">
-            <input name="email[]" class="field__input" placeholder="Email" id="create-account-email" type="email" inputmode="email" required>
+            <!-- // NOTE -->
+            <input name="create-account-email" class="field__input" placeholder="Email" id="create-account-email" type="text" inputmode="email" required>
             <label for="create-account-email" class="field__label">Email</label>
             <div class="field__error-message">Error</div>
           </div>
 
           <div class="form__field field">
-            <input name="phone[]" class="field__input" placeholder="Phone" id="create-account-phone" type="tel" inputmode="tel" required>
+            <!-- // NOTE -->
+            <input name="create-account-phone" class="field__input" placeholder="Phone" id="create-account-phone" type="text" inputmode="tel" required>
             <label for="create-account-phone" class="field__label">Phone</label>
           </div>
 
-          <fieldset class="form__radio-box">
+          <fieldset class="form__radio-box" id="create-account-company-size">
             <legend class="form__radio-header">Company size</legend>
             <ul class="form__radio-list">
               <li>
                 <label class="form__radio radio">
-                  <input class="radio__input" id="create-account-company-size-1" type="radio" name="create-account-company-size" required>
+                  <!-- // NOTE -->
+                  <input class="radio__input" value="1-15" type="radio" name="create-account-company-size" checked>
                   <div class="radio__box">
                     <img class="radio__image" src="./images/gum.svg">
                     <span class="radio__label">1-15</span>
@@ -64,7 +68,8 @@
               </li>
               <li>
                 <label class="form__radio radio">
-                  <input class="radio__input" id="create-account-company-size-2" type="radio" name="company-size" required>
+                  <!-- // NOTE -->
+                  <input class="radio__input" value="5-50" type="radio" name="create-account-company-size">
                   <div class="radio__box">
                     <img class="radio__image" src="./images/gum-pair.svg">
                     <span class="radio__label">5-50</span>
@@ -73,7 +78,8 @@
               </li>
               <li>
                 <label class="form__radio radio">
-                  <input class="radio__input" id="create-account-company-size-1" type="radio" name="create-account-company-size">
+                  <!-- // NOTE -->
+                  <input class="radio__input" value="50+" type="radio" name="create-account-company-size">
                   <div class="radio__box">
                     <img class="radio__image" src="./images/gum-trio.svg">
                     <span class="radio__label">50+</span>
@@ -84,7 +90,8 @@
           </fieldset>
 
           <div class="form__field field">
-            <textarea name="questions" class="field__input" placeholder="Questions" id="create-account-questions"></textarea>
+            <!-- // NOTE -->
+            <textarea name="create-account-questions" class="field__input" placeholder="Questions" id="create-account-questions"></textarea>
             <label for="create-account-questions" class="field__label">Questions</label>
           </div>
 
@@ -104,23 +111,23 @@
       <h3 class="title">Feedback form</h3>
       <form id="feedback-form" class="modal__form form">
         <div class="form__field field">
-          <input name="name[]" class="field__input" placeholder="Full Name" id="feedback-name" type="text" required>
+          <input name="feedback-name" class="field__input" placeholder="Full Name" id="feedback-name" type="text" required>
           <label for="feedback-name" class="field__label">Full Name</label>
         </div>
 
         <div class="form__field field">
-          <input name="email[]" class="field__input" placeholder="Email" id="feedback-email" type="email" inputmode="email" required>
+          <input name="feedback-email" class="field__input" placeholder="Email" id="feedback-email" type="text" inputmode="email" required>
           <label for="feedback-email" class="field__label">Email</label>
           <div class="field__error-message">Error</div>
         </div>
 
         <div class="form__field field">
-          <input name="phone[]" class="field__input" placeholder="Phone" id="feedback-phone" type="tel" inputmode="tel" required>
+          <input name="feedback-phone" class="field__input" placeholder="Phone" id="feedback-phone" type="text" inputmode="tel" required>
           <label for="feedback-phone" class="field__label">Phone</label>
         </div>
 
         <div class="form__field field">
-          <textarea name="comments" class="field__input" placeholder="Comments" id="feedback-comments"></textarea>
+          <textarea name="feedback-comments" class="field__input" placeholder="Comments" id="feedback-comments"></textarea>
           <label for="feedback-comments" class="field__label">Comments</label>
         </div>
 
